working copy&paste and minimal add feature

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,20 +4,22 @@
     "version": "2.0.0",
     "description": "Adds a side menu with clickable timestamps from YouTube comments",
     "permissions": [
-      "activeTab",
-      "scripting"
+        "activeTab",
+        "scripting",
+        "clipboardRead"
     ],
     "host_permissions": [
-      "https://www.youtube.com/*"
+        "https://www.youtube.com/*",
+        "https://www.twitch.tv/*"
     ],
     "action": {
-      "default_popup": "popup.html"
+        "default_popup": "popup.html"
     },
     "content_scripts": [
-      {
+        {
         "matches": ["https://www.youtube.com/*"],
         "js": ["content.js"],
         "css": ["styles.css"]
-      }
+        }
     ]
-  }
+}
