--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
     },
     "content_scripts": [
         {
-        "matches": ["https://www.youtube.com/*"],
+        "matches": ["https://www.youtube.com/*", "https://www.twitch.tv/*"],
         "js": ["content.js"],
         "css": ["styles.css"]
         }
