added 128x128 icon updated gitignore to ignore file in bin folder

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,11 @@
 {
     "manifest_version": 3,
     "name": "VodTS",
-    "version": "2.0.0",
+    "version": "2.00.01",
     "description": "Displays clickable timestamps from YouTube and Twitch",
+    "icons": {
+        "128": "icon128.png"
+    },
     "permissions": [
         "activeTab",
         "scripting",
